--- a/app/src/main/res/drawable/border_background.xml
+++ b/app/src/main/res/drawable/border_background.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="#444444" />
-    <corners android:radius="8dp" />
+        android:color="#797979" /> <!-- Divider line color -->
+    <corners android:radius="4dp" />
     <solid android:color="@android:color/transparent" />
 </shape>
