--- a/app/src/main/res/drawable/edit_text_background.xml
+++ b/app/src/main/res/drawable/edit_text_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/lightBlue"/>
     <corners android:radius="8dp"/>
+    <solid android:color="#3E4B5D"/> <!-- Background color for the edit text -->
 </shape>
