--- a/app/src/main/res/layout/fragment_home_news.xml
+++ b/app/src/main/res/layout/fragment_home_news.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:text="Welcome, User"
             android:textSize="20sp"
-            android:textStyle="bold"
+            android:fontFamily="@font/bubblegum"
             android:textColor="@color/white"
             android:layout_margin="20dp"
             android:layout_alignParentLeft="true"
@@ -32,6 +32,7 @@
             android:layout_alignTop="@id/welcome"
             android:layout_marginTop="45dp"
             android:layout_marginStart="20dp"
+            android:fontFamily="@font/bubblegum"
             android:text="News"
             android:textColor="@color/white"
             android:textSize="20sp"/>
@@ -47,6 +48,7 @@
             android:layout_marginRight="-70dp"
             android:background="@drawable/tab_control_bg"
             android:text="Manga"
+            android:fontFamily="@font/bubblegum"
             android:textColor="@color/white"
             android:textSize="20sp"/>
 
@@ -73,7 +75,7 @@
                 app:iss_corner_radius="20"
                 app:iss_delay="2500"
                 app:iss_period="2500"
-                app:iss_title_background="@drawable/gradient" />
+                app:iss_title_background="@drawable/gradient"/>
 
 
         </androidx.cardview.widget.CardView>
