--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -18,6 +18,7 @@
             android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="20dp"
+            android:fontFamily="@font/bubblegum"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
